[gd_scene load_steps=7 format=3 uid="uid://o1f7of3g6sug"]

[ext_resource type="Script" uid="uid://d140xfa1pxnki" path="res://game_manager.gd" id="1_h2yge"]
[ext_resource type="Script" uid="uid://dipjbs5broelb" path="res://priest.gd" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://cau40mrokrh14" path="res://cloud_spawner.gd" id="2_0xm2m"]
[ext_resource type="PackedScene" uid="uid://c382wual1ah3b" path="res://cross.tscn" id="3_lquwl"]
[ext_resource type="PackedScene" uid="uid://dggbdab14qbq3" path="res://cloud.tscn" id="4_1bvp3"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_lquwl"]
size = Vector2(64, 64)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_h2yge")

[node name="Priest" type="Node2D" parent="."]
position = Vector2(124, 418)
script = ExtResource("1_ig7tw")
cross_scene = ExtResource("3_lquwl")

[node name="Sprite2D" type="Sprite2D" parent="Priest"]
position = Vector2(17.5, 92)
scale = Vector2(1.546875, 3.875)
texture = SubResource("PlaceholderTexture2D_lquwl")

[node name="HandMarker" type="Marker2D" parent="Priest"]
position = Vector2(77, 46)

[node name="CloudSpawner" type="Node2D" parent="."]
position = Vector2(533, 209)
script = ExtResource("2_0xm2m")
cloud_scene = ExtResource("4_1bvp3")

[node name="UI" type="CanvasLayer" parent="."]

[node name="TimerLabel" type="Label" parent="UI"]
offset_right = 40.0
offset_bottom = 23.0

[node name="ResultLabel" type="Label" parent="UI"]
offset_left = -138.0
offset_top = 331.0
offset_right = -98.0
offset_bottom = 354.0
